--- a/index.html
+++ b/index.html
@@ -2,111 +2,53 @@
 <html>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <head>
-
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="Michelle Beyer">
-<title>MTM - MediatorenTeamMünchen</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Michelle Beyer">
+  <title>MTM - MediatorenTeamMünchen</title>
 
   <style>
-  /* Style the tab */
-  {box-sizing: border-box}
 
-  /* Set height of body and the document to 100% */
-  body, html {
-      height: 100%;
-      margin: 0;
-      font-family: Arial;
-    }
+  html {
+    background: url(images/Sky2.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
-    /* Style tab links */
-    .tablink {
-      background-color: #bfbfbf;
-      color: black;
-      float: left;
-      border: 1px solid #333333;
-      outline: none;
-      cursor: pointer;
-      padding: 14px 16px;
-      font-size: 17px;
-    }
+  }
 
-    .tablink:hover {
-      background-color: #a6a6a6;
-    }
+  h1 {
+    font-family:"Trebuchet MS",Helvetica, sans-serif;
+    color: #000080;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 40px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+  }
 
-    /* Style the tab content (and add height:100% for full page content) */
-    .tabcontent {
-      color: black;
-      display: none;
-      padding: 100px 20px;
-      height: 100%;
-    }
-    #Home {background-color: #f2f2f2;}
-    #About {background-color: #e6fff2;}
-    #Team {background-color: #e6f5ff;}
+  .center {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   </style>
-
-
-
 </head>
 
-<body style="font-family:Trebuchet MS; background-color:DarkSeaGreen ;">
-  <center>
-  </br></br></br></br></br></br></br></br></br></br>
-    <marquee behavior="alternate"><h1> ~Animation~ </h1> </marquee>
-  </center>
 
-
-
-    <button class="tablink" onclick="openTab('Home', this, '#777')" id="defaultOpen" style="width: 25%">Home</button>
-    <button class="tablink" onclick="openTab('About', this, '#777')" style="width: 50%">Was ist das?</button>
-    <button class="tablink" onclick="openTab('Team', this, '#777')" style="width: 25%">Team</button>
-
-
-  <div id="Home" class="tabcontent">
-    <h3>Home</h3>
-    <p>Das wird einmal die Home-Seite...</p>
+<body>
+  <div class="center">
+    <h1>Diese Seite steht Ihnen bald zur Verfügung. </h1>
   </div>
 
-  <div id="About" class="tabcontent">
-    <h3>About us</h3>
-    <p>future content</p>
-  </div>
-
-  <div id="Team" class="tabcontent">
-    <h3>Team</h3>
-    <p>Hier wird bald das Team zu finden sein...</p>
-  </div>
-<center>
-
-  <nav>
-    <a href="/impressum/">Impressum</a> |
-    <a href="/faq/">FAQ</a>
-  </nav>
-</center>
 
 
 
-  <script>
-  function openTab(pageName,elmnt,color) {
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-    }
-    tablinks = document.getElementsByClassName("tablink");
-    for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].style.backgroundColor = "";
-    }
-    document.getElementById(pageName).style.display = "block";
-    elmnt.style.backgroundColor = color;
 
-}
 
-  // Get the element with id="defaultOpen" and click on it
-  document.getElementById("defaultOpen").click();
-  </script>
 
 </body>
 </html>
